force-app/main/default/objects/Event_Setting__c/Event_Setting__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Child of Edition. This will set the tab visibility on the home page of a particular event.</description>
    <label>Event Setting</label>
    <nameField>
        <label>Event Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>