force-app/main/default/objects/Event_Setting__c/fields/Contractor_Nomination__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Nomination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>allow Contractor Nomination</description>
    <label>Contractor Nomination</label>
    <type>Checkbox</type>
</CustomField>