force-app/main/default/objects/Event_Setting__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Defines for which event this event setting is intended for.</description>
    <inlineHelpText>What Events is this Event Setting is intended for?</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>