force-app/main/default/objects/Event_Setting__c/fields/stand_design_submission__c.field-meta.xml
<CustomField>
    <fullName>stand_design_submission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>allow stand design submission</description>
    <label>Stand Design Submission</label>
    <type>Checkbox</type>
</CustomField>